6/29/10 move reset functionality into model, factory for creating default solution for each module
6/25/10 disable pickability of nodes that are not interactive
6/25/10 fix pickability of beaker so that tools can be picked when they are immersed in solution
6/25/10 show only molecules in magnifying glass, don't show tools or any other nodes behind the glass
6/25/10 workaround to properly gray out HTML text when "Show H2O Molecules" check box is disabled
6/21/10 implement Reset All for existing functionality
6/19/10 deadline met for interviews (6/21/10)
# 0.00.14 (41807) Jun 19, 2010
6/19/10 dev version with fixes and 6/18/10 change requests
6/19/10 in magnifying glass view, hide minor species for acid (OH-) and base (H3O+)
6/19/10 change "Bar Graph" to "Concentration Graph"
6/19/10 change "Show Water" to "Show H2O Molecules"
# 0.00.13 (41783) Jun 17, 2010
6/17/10 dev version with 6/17/10 change requests
6/17/10 enable "Show Water" check box only when Magnifying Glass is selected
6/17/10 show 2 water molecules above "2H2O" symbol in water reaction equation
6/17/10 change strength range: 1e-10 to 1e2
6/17/10 change concentration units from "M" to "mol/L"
6/17/10 hide File->Save/Load menu items, does this sim have this feature?
6/15/10 set a background color for the control panel
# 0.00.12 (41734) Jun 15, 2010
6/15/10 dev version with all change requests from 6/15/10 meeting
6/15/10 increase height of concentration graph to fill the beaker
6/15/10 make order of bars in concentration graph match order of molecules in reaction equations
6/15/10 change range of concentration graph's y axis to 1e-8 to 1e2
6/15/10 hide molecule symbols & icons below bars in concentration graph
6/15/10 swap order of check boxes and radio buttons in Tools control panel
6/15/10 disconnect concentration graph from "Show Water" control, always show H2O bar in graph (except for strong base)
6/15/10 new reaction equation for water, 2H2O <-> H30+ + OH-