@@ -27,6 +27,6 @@ LOW PRIORITY
 MIGRATE TO COMMON
 - PrecisionDecimal (also appears in ph-scale, advanced-acid-base-solutions)
 - ABSRadioButton
-- HTMLCheckBox (usable elsewhere? see #1704)
+- HTMLCheckBox (usable in advanced-acid-base-solutions RatioCheckBox? see #1704)
 
 --
